# ai-assisted-editing

./: .gitignore  Makefile  README.md  TODO  manage.py  package-lock.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml
accounts/: admin.py  managers.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
blog/: urls.py  views.py
document/: urls.py  views.py
document/admin/: __init__.py  change.py  document.py  snapshot.py  version.py
document/migrations/: 0001_initial.py  0002_version_snapshot_folder_change.py  0003_alter_document_options.py  0004_version_content.py  0005_alter_change_content_alter_version_content.py
document/models/: __init__.py  change.py  document.py  folder.py  snapshot.py  version.py
document/services/: __init__.py  aggregate_snapshot.py  change.py  create_change.py  create_document.py  create_snapshot.py  create_version.py  document.py  snapshot.py  update_document.py  update_document_title.py  version.py
document/views/: __init__.py
editor/: urls.py  views.py
gateway/: urls.py  views.py
nodraft/: apps.py  asgi.py  urls.py  views.py  wsgi.py
nodraft/settings/: base.py  development.py  prompt.py
portal/: urls.py  views.py
project/: backends.py  database  models.py  settings.py  urls.py
project/templates/: base.html
surveys/: admin.py  urls.py  views.py
surveys/migrations/: 0001_initial.py
surveys/models/: __init__.py  answer.py  option.py  page.py  question.py  submission.py  survey.py
templates/: base.html
templates/accounts/: login.html  register.html
templates/document/: list.html  show.html
templates/editor/: dashboard.html
templates/gateway/: home.html
templates/include/: messages.html
(+59 files in other folders)
