[tool.poetry]
name = "nodraft"
version = "0.1.0"
description = "accessible forms"
authors = ["ojoseph@nodraft.me"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0"
django-filter = "*"
django-environ = "*"
drf-yasg = "*"
djangorestframework = "*"
gunicorn = "*"
whitenoise = "^6.2.0"
django-tailwind = "^3.4.0"

[tool.poetry.dev-dependencies]
coverage = "*"
factory-boy = "*"
django-stubs = "*"
mypy = "*"
djangorestframework-stubs = "*"
autopep8 = "*"
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
