[tool.poetry]
name = "nodraft"
version = "0.1.0"
description = "ai powered platform for enhanced writing"
authors = ["Orlson Aine Joseph <ojoseph@princeton.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"
whitenoise = "^6.4.0"
django-browser-reload = "^1.8.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
